--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Launcher">
-        <activity android:name=".BlockActivity"></activity>
+        <activity android:name=".CardGameActivity"></activity>
+        <activity android:name=".BlockActivity" />
         <activity android:name=".Werewolf" />
         <activity android:name=".RPS" />
         <activity android:name=".MainActivity">
