--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.twitter.sdk.android:twitter-mopub:3.1.1'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation "com.airbnb.android:lottie:2.8.0"
 }
 
 apply plugin: 'com.android.application'
