--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Launcher">
-        <activity android:name=".BlockActivity"></activity>
-        <activity android:name=".CardGameActivity"></activity>
+        <activity android:name=".CardGameActivity" />
+        <activity android:name=".BlockActivity" />
         <activity android:name=".Werewolf" />
         <activity android:name=".RPS" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Sprash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
 
-                <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
                 <data
                     android:host="twitter"
